--- a/templates/success.html
+++ b/templates/success.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <div class="success-box">
-        <h1>🎉 Signup Successful!</h1>
-        <p>Thank you for registering. Your account has been created.</p>
+        <h1>Signup Successful!</h1>
+        <p>Thank you for registering.</p>
         <a href="{{ url_for('signup') }}">Back to Signup</a>
         <a href="{{ url_for('users') }}">View Registered Users</a>
     </div>
